# QThelloWorld

./: CMakeLists.txt  CSimulation.cpp  CSimulation.hpp  GLWidget.cpp  GLWidget.h  QThelloWorld.cpp  README.md  mainwin.hpp  mdmainwin.cpp  mdmainwin.h  mdmainwin.ui  ui_mdmainwin.h
